syntax = "proto3";

message VoteRequest {
  int32 term = 1;
  int32 candidate = 2;
  int64 last_log_index = 3;
  int32 last_log_term = 4;
}

message VoteResponse {
  int32 term = 1;
  bool vote_granted = 2;
}

service RaftService {
  rpc RequestVote (VoteRequest) returns (VoteResponse);
}
